src/objects/Branding_Location__c.object
<CustomObject>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Business City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Branding Locations</relationshipLabel>
        <relationshipName>Branding_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Email_Address__c</fullName>
        <label>Business Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Location_Name__c</fullName>
        <label>Business/Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Postal_Code__c</fullName>
        <label>Business Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Branding Locations</relationshipLabel>
        <relationshipName>Branding_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address1__c</fullName>
        <label>Business Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address2__c</fullName>
        <label>Business Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclaimer_for_Customer_Invoice__c</fullName>
        <label>Disclaimer for Customer Invoice</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_for_Deal_Documents__c</fullName>
        <label>Disclaimer for Deal Documents</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_for_Order_Deposit__c</fullName>
        <label>Disclaimer for Order Deposit</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_for_Receipts__c</fullName>
        <label>Disclaimer for Receipts</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer_for_Service_Job__c</fullName>
        <label>Disclaimer for Service Job</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formatted_Business_Phone__c</fullName>
        <formula>IF(Business_Phone__c != null, 
IF( Business_Country__c != null , 
IF( Business_Country__r.Name__c  == &apos;Australia&apos;, 
CASE( LEN(Business_Phone__c) , 
8 , MID(Business_Phone__c, 0, 4) + &quot; &quot; +MID(Business_Phone__c, 5, 4) , 
10 , IF(BEGINS(Business_Phone__c, &apos;04&apos;) || BEGINS(Business_Phone__c, &apos;05&apos;) , 
MID(Business_Phone__c, 0, 4) + &quot; &quot; +MID(Business_Phone__c, 5, 3)+ &quot; &quot; +MID(Business_Phone__c, 8, 3), 
MID(Business_Phone__c, 0, 2) + &quot; &quot; +MID(Business_Phone__c, 3, 4)+ &quot; &quot; +MID(Business_Phone__c, 7, 4)) 
, Business_Phone__c ), 


CASE( LEN(Business_Phone__c) , 10, &quot;(&quot; + MID(Business_Phone__c, 0, 3) + &quot;) &quot; +MID(Business_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Business_Phone__c, 7, 4) , Business_Phone__c)) 
, 
CASE( LEN(Business_Phone__c) , 8 , MID(Business_Phone__c, 0, 4) + &quot; &quot; +MID(Business_Phone__c, 4, 4) , 
10, &quot;(&quot; + MID(Business_Phone__c, 0, 3) + &quot;) &quot; +MID(Business_Phone__c, 4, 3) 
+ &quot;-&quot; +MID(Business_Phone__c, 7, 4) , Business_Phone__c)), 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Business Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Disclaimer_for_Customer_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disclaimer for Customer Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Disclaimer_for_Deal_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disclaimer for Deal Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Disclaimer_for_Order_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disclaimer for Order Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Disclaimer_for_Receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disclaimer for Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Disclaimer_for_Service_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disclaimer for Service Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_for_Customer_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature for Customer Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_for_Deal_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature for Deal Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_for_Order_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature for Order Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_for_Receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature for Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signature_for_Service_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature for Service Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branding_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logo_Height__c</fullName>
        <label>Logo Height</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_Width__c</fullName>
        <label>Logo Width</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Branding Location</label>
    <nameField>
        <displayFormat>BL-{0000000}</displayFormat>
        <label>Branding Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branding Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>